--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ quarkus.datasource.jdbc.url = jdbc:mysql://localhost:33060/efactura?zeroDateTime
 
 quarkus.hibernate-orm.database.generation = none
 quarkus.http.port=8090
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
+quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
+quarkus.http.cors.methods=GET, OPTIONS
